--- a/src/app/main-content/careers/careers.component.html
+++ b/src/app/main-content/careers/careers.component.html
@@ -1,180 +1,85 @@
 <app-container-row-section classname="career section-info" idname="">
-    <div class="content-head center">
-        <h3 class="center_divider"><em>Career <span class="highlight-color">Opportunities</span></em></h3>
-    </div>
-    <div class="col-md-9">
-        <div class="clearfix seprator_top_forty"></div>
-        <p>Since its establishment in 2009, Pacific Sea BPO Services (PSP) transformed into
-            one of the biggest business process outsourcing companies that deliver top-notched services in
-            marketing, customer support and emerging technologies.</p>
-        <div class="clearfix seprator_top_forty"></div>
-        <h4>BENEFITS</h4>
-        <h5>Expat</h5>
-        <ol class="list-custom">
-            <li><span class="number">1.</span> First air ticket to the
-                Philippines reimbursed fully by the Company</li>
-            <li><span class="number">2.</span> FREE accommodation in
-                Makati City with daily housemaid to clean the condo unit and wash your clothes (also includes
-                utility bills and Wi-Fi paid for by the Company)</li>
-            <li><span class="number">3.</span> Daily transport to and from
-                the office</li>
-            <li><span class="number">4.</span> Taxes will be absorbed by
-                the Company</li>
-            <li><span class="number">5.</span> THIRTY (30) days Annual
-                Leave</li>
-            <li><span class="number">6.</span> Probation Increment</li>
-            <li><span class="number">7.</span> Bonus payout twice a year
-            </li>
-            <li><span class="number">8.</span> Exciting Company Events
-                including our Luxurious Annual Dinner and Overseas Company Trips</li>
-            <li><span class="number">9.</span> Annual festival
-                Celebrations and gifts</li>
-            <li><span class="number">10.</span> Life, Accidental and
-                Medical Insurance Coverage</li>
-            <li><span class="number">11.</span> Gym Memberships</li>
-            <li><span class="number">12.</span> Medicine Reimbursement
-            </li>
-        </ol>
-        <div class="clearfix seprator_top_thirty"></div>
-        <h5>Local</h5>
-        <ol class="list-custom">
-            <li><span class="number">1.</span> FREE in company
-                self-improvement courses</li>
-            <li><span class="number">2.</span> Paid Annual Leave</li>
-            <li><span class="number">3.</span> Probation Increment</li>
-            <li><span class="number">4.</span> Bonus payout twice a year
-            </li>
-            <li><span class="number">5.</span> Life, Accidental and
-                Medical Insurance Coverage</li>
-            <li><span class="number">6.</span> Exciting Company Events
-                including our Luxurious Annual Dinner and Overseas Company Trips</li>
-            <li><span class="number">7.</span> Annual festival
-                celebrations and gifts</li>
-            <li><span class="number">8.</span> Gym Memberships</li>
-            <li><span class="number">9.</span> Medicine Reimbursement</li>
-        </ol>
-        <div class="clearfix seprator_top_thirty"></div>
-    </div>
-    <div class="col-md-3 clearfix positions">
-        <div class="clearfix seprator_top_forty"></div>
-        <h4>JOB <span class="highlight-color">POSITIONS</span></h4>
-        <div class="clearfix seprator_top_thirty"></div>
-        <h5>LOCAL</h5>
-        <ul class="diamond">
-            <li><a href="/jobs?category=local&amp;title=it-support-assistant-local&amp;nationality=Filipino" class="">IT
-                    Support Assistant</a></li>
-            <li><a href="/jobs?category=local&amp;title=customer-service-assistant-local&amp;nationality=Filipino"
-                    class="">Customer Service Assistant (CSA)</a></li>
-            <li><a href="/jobs?category=local&amp;title=customer-service-assistant-korean-speaking-local&amp;nationality=Filipino"
-                    class="">Customer Service Assistant - (Korean Speaking)</a></li>
-            <li><a href="/jobs?category=local&amp;title=customer-service-assistant-japanese-speaking-local&amp;nationality=Filipino"
-                    class="">Customer Service Assistant - (Japanese Speaking)</a></li>
-            <li><a href="/jobs?category=local&amp;title=customer-service-assistant-portuguese-speaking-local&amp;nationality=Filipino"
-                    class="">Customer Service Assistant - (Portuguese Speaking)</a></li>
-            <li><a href="/jobs?category=local&amp;title=risk-management-assistant-local&amp;nationality=Filipino"
-                    class="">Risk Management Assistant</a></li>
-            <li><a href="/jobs?category=local&amp;title=finance-settlement-local-reporting&amp;nationality=Filipino"
-                    class="">Finance Settlement Assistant - Reporting</a></li>
-            <li><a href="/jobs?category=local&amp;title=finance-settlement-local-operations&amp;nationality=Filipino"
-                    class="">Finance Settlement Assistant - Operations</a></li>
-            <li><a href="/jobs?category=local&amp;title=paid-media-specialist-local&amp;nationality=Filipino" class="">Paid
-                    Media Specialist</a></li>
-            <li><a href="/jobs?category=local&amp;title=seo-assistant-local&amp;nationality=Filipino" class="">SEO
-                    Assistant</a></li>
-            <li><a href="/jobs?category=local&amp;title=seo-executive-local&amp;nationality=Filipino" class="">SEO
-                    Executive</a></li>
-            <li><a href="/jobs?category=local&amp;title=seo-content-writer-assistant-local&amp;nationality=Filipino"
-                    class="">SEO Content Writer Assistant</a></li>
-            <li><a href="/jobs?category=local&amp;title=social-media-marketing-assistant-local&amp;nationality=Filipino"
-                    class="">Social Media Marketing Assistant</a></li>
-            <li><a href="/jobs?category=local&amp;title=marketing-assistant-local&amp;nationality=Filipino"
-                    class="">Marketing Assistant</a></li>
-            <li><a href="/jobs?category=local&amp;title=sr-web-graphic-desiner-local&amp;nationality=Filipino" class="">Sr.
-                    Web Graphic Designer</a></li>
-            <li><a href="/jobs?category=local&amp;title=company-nurse-local&amp;nationality=Filipino" class="">Company
-                    Nurse</a></li>
-        </ul>
-        <div class="clearfix seprator_top_thirty"></div>
-        <h5>EXPAT</h5>
-        <ul class="diamond">
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-expat" class="">Marketing
-                    Assistant</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-bangladeshi-expat&amp;nationality=Bangladeshi"
-                    class="">Marketing Assistant (Bangladeshi)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-cambodian-expat&amp;nationality=Cambodian"
-                    class="">Marketing Assistant (Cambodian)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-indonesian-expat&amp;nationality=Indonesian"
-                    class="">Marketing Assistant (Indonesian)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-mandarin-speaking-expat&amp;nationality=Malaysian-Taiwanese-Chinese"
-                    class="">Marketing Assistant (Mandarin Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-japanese-expat&amp;nationality=Japanese"
-                    class="">Marketing Assistant (Japanese)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-korean-expat&amp;nationality=Korean"
-                    class="">Marketing Assistant (Korean)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-brazil-expat&amp;nationality=Brazil/Angolan/Portugal+(Portuguese+Speaking)"
-                    class="">Marketing Assistant (Brazil)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-portuguese-speaking-expat&amp;nationality=Any+Expat+Nationality"
-                    class="">Marketing Assistant (Portuguese Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-thai-expat&amp;nationality=Thai"
-                    class="">Marketing Assistant (Thai)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-vietnamese-expat&amp;nationality=Vietnamese"
-                    class="">Marketing Assistant (Vietnamese)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=marketing-assistant-mandarin-speaking-expat&amp;nationality=Malaysian-+Taiwanese"
-                    class="">Marketing Executive (Mandarin Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-assistant-expat" class="">SEO Assistant</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-assistant-indonesian-expat&amp;nationality=Indonesian"
-                    class="">SEO Assistant (Indonesian)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-assistant-vietnamese-expat&amp;nationality=Vietnamese"
-                    class="">SEO Assistant (Vietnamese)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-assistant-japanese-expat&amp;nationality=Japanese" class="">SEO
-                    Assistant (Japanese)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-assistant-bangladeshi-expat&amp;nationality=Bangladeshi"
-                    class="">SEO Assistant (Bangladeshi)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-assistant-thai-expat&amp;nationality=Thai" class="">SEO
-                    Assistant (Thai)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=seo-executive-expat&amp;nationality=Any+Expat+Nationality"
-                    class="">SEO Executive</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-expat" class="">Customer
-                    Service Assistant</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-vietnamese-expat&amp;nationality=Vietnamese"
-                    class="">Customer Service Assistant (Vietnamese)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-cambodian-expat&amp;nationality=Cambodian"
-                    class="">Customer Service Assistant (Cambodian)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-thai-expat&amp;nationality=Thai"
-                    class="">Customer Service Assistant (Thai)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-indonesian-expat&amp;nationality=Indonesian+(Bahasa)"
-                    class="">Customer Service Assistant (Indonesian)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-indian-telugu-expat&amp;nationality=Indian"
-                    class="">Customer Service Assistant (Indian- Telugu Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-indian-kannada-expat&amp;nationality=Indian"
-                    class="">Customer Service Assistant (Indian- Kannada Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-korean-expat&amp;nationality=Korean"
-                    class="">Customer Service Assistant (Korean)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-japanese-expat&amp;nationality=Japanese"
-                    class="">Customer Service Assistant (Japanese)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-portuguese-speaking-expat&amp;nationality=Brazilian-Angolan-Portuguese"
-                    class="">Customer Service Assistant (Portuguese Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-mandarin-speaking-expat&amp;nationality=Malaysian-Taiwanese-Chinese"
-                    class="">Customer Service Assistant (Mandarin Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-assistant-bangladeshi-expat&amp;nationality=Bangladeshi"
-                    class="">Customer Service Assistant (Bangladeshi)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=customer-service-manager-expat&amp;nationality=Any+Expat+Nationality"
-                    class="">Customer Service Manager</a></li>
-            <li><a href="/jobs?category=expat&amp;title=risk-management-assistant-expat&amp;nationality=Thai-Vietnamese-Indonesian"
-                    class="">Risk Management Assistant</a></li>
-            <li><a href="/jobs?category=expat&amp;title=paid-media-specialist-expat&amp;nationality=Any+Expat+Nationality"
-                    class="">Paid Media Specialist</a></li>
-            <li><a href="/jobs?category=expat&amp;title=pmo-assistant-mandarin-expat&amp;nationality=Malaysian-Taiwanese-Singaporean"
-                    class="">PMO Assistant (Mandarin Speaking)</a></li>
-            <li><a href="/jobs?category=expat&amp;title=casino-marketing-expat&amp;nationality=Any+Expat+Nationality"
-                    class="">Casino Marketing</a></li>
-            <li><a href="/jobs?category=expat&amp;title=it-manager-mandarin-expat&amp;nationality=Malaysian-Taiwanese-Singaporean"
-                    class="">IT Manager (Mandarin Speaking)</a></li>
-        </ul>
-        <div class="clearfix seprator_top_forty"></div>
-        <p> Can't find what you are looking for?<br>Discover what’s
-            possible. Join our Talent Pool today! </p>
-        <p><a href="/resume" class="btn-medium btn-full-black active">JOIN
-                US</a></p>
-    </div>
+        <div class="content-head center">
+                <h3 class="center_divider" [innerHtml]="'careers.title' | translate"></h3>
+        </div>
+        <div class="col-md-9">
+                <div class="clearfix seprator_top_forty"></div>
+                <p [innerHtml]="'careers.description' | translate"></p>
+                <div class="clearfix seprator_top_forty"></div>
+                <h4 [innerText]="'careers.benefits.title' | translate"></h4>
+                <h5 [innerText]="'careers.benefits.contents.0.category' | translate"></h5>
+                <ol class="list-custom">
+                        <li><span class="number">1.</span> {{ 'careers.benefits.contents.0.benefits.0' | translate }}
+                        </li>
+                        <li><span class="number">2.</span> {{ 'careers.benefits.contents.0.benefits.1' | translate }}
+                        </li>
+                        <li><span class="number">3.</span> {{ 'careers.benefits.contents.0.benefits.2' | translate }}
+                        </li>
+                        <li><span class="number">4.</span> {{ 'careers.benefits.contents.0.benefits.3' | translate }}
+                        </li>
+                        <li><span class="number">5.</span> {{ 'careers.benefits.contents.0.benefits.4' | translate }}
+                        </li>
+                        <li><span class="number">6.</span> {{ 'careers.benefits.contents.0.benefits.5' | translate }}
+                        </li>
+                        <li><span class="number">7.</span> {{ 'careers.benefits.contents.0.benefits.6' | translate }}
+                        </li>
+                        <li><span class="number">8.</span> {{ 'careers.benefits.contents.0.benefits.7' | translate }}
+                        </li>
+                        <li><span class="number">9.</span> {{ 'careers.benefits.contents.0.benefits.8' | translate }}
+                        </li>
+                        <li><span class="number">10.</span> {{ 'careers.benefits.contents.0.benefits.9' | translate }}
+                        </li>
+                        <li><span class="number">11.</span> {{ 'careers.benefits.contents.0.benefits.10' | translate }}
+                        </li>
+                        <li><span class="number">12.</span> {{ 'careers.benefits.contents.0.benefits.11' | translate }}
+                        </li>
+                </ol>
+                <div class="clearfix seprator_top_thirty"></div>
+                <h5 [innerText]="'careers.benefits.contents.1.category' | translate"></h5>
+                <ol class="list-custom">
+                        <li><span class="number">1.</span> {{ 'careers.benefits.contents.1.benefits.0' | translate }}
+                        </li>
+                        <li><span class="number">2.</span> {{ 'careers.benefits.contents.1.benefits.1' | translate }}
+                        </li>
+                        <li><span class="number">3.</span> {{ 'careers.benefits.contents.1.benefits.2' | translate }}
+                        </li>
+                        <li><span class="number">4.</span> {{ 'careers.benefits.contents.1.benefits.3' | translate }}
+                        </li>
+                        <li><span class="number">5.</span> {{ 'careers.benefits.contents.1.benefits.4' | translate }}
+                        </li>
+                        <li><span class="number">6.</span> {{ 'careers.benefits.contents.1.benefits.5' | translate }}
+                        </li>
+                        <li><span class="number">7.</span> {{ 'careers.benefits.contents.1.benefits.6' | translate }}
+                        </li>
+                        <li><span class="number">8.</span> {{ 'careers.benefits.contents.1.benefits.7' | translate }}
+                        </li>
+                        <li><span class="number">9.</span> {{ 'careers.benefits.contents.1.benefits.8' | translate }}
+                        </li>
+                        <li><span class="number">10.</span> {{ 'careers.benefits.contents.1.benefits.9' | translate }}
+                        </li>
+                </ol>
+                <div class="clearfix seprator_top_thirty"></div>
+        </div>
+        <div class="col-md-3 clearfix positions">
+                <div class="clearfix seprator_top_forty"></div>
+                <h4 [innerHtml]="'jobs.title' | translate"></h4>
+                <div class="clearfix seprator_top_thirty"></div>
+                <div *ngFor="let content of 'jobs.contents' | translate">
+                        <h5>{{ content.category }}</h5>
+                        <ul class="diamond">
+                                <li *ngFor="let job of content.job_lists">
+                                        <a
+                                        [href]="'/jobs/?category='+ content.category.toLowerCase() + '&amp;title=' + job.slug + '&amp;nationality=' + job.market.toLowerCase()">{{
+                                        job.title }}</a>
+                                </li>
+                        </ul>
+                        <div class="clearfix seprator_top_thirty"></div>
+                </div>
+
+                <div class="clearfix seprator_top_forty"></div>
+                <p> Can't find what you are looking for?<br>Discover what’s
+                        possible. Join our Talent Pool today! </p>
+                <p><a href="/resume" class="btn-medium btn-full-black active">JOIN
+                                US</a></p>
+        </div>
 </app-container-row-section>
