--- a/src/app/main-content/home/home-profile/home-profile.component.html
+++ b/src/app/main-content/home/home-profile/home-profile.component.html
@@ -1,35 +1,36 @@
 <div class="content-head center">
-    <h3 class="center_divider"><a href="/companyprofile"><em>Company <span
-                    class="highlight-color">Profile</span></em></a>
+    <h3 class="center_divider">
+        <a routerLink="/companyprofile" [innerHTML]="'home.company_profile.title' | translate"></a>
     </h3>
 </div>
-<p class="content-sub">Established in 2009, Pacific Sea BPO rapidly grew into one
-    of the biggest main players in the BPO industry. Pacific Sea’s pillars of success are fully
-    articulated below</p>
-<div class="col-md-4 animated fadeInRight"><span class="ct-ribbon"><span class="ct-triangle"></span><span
-            class="ct-triangle two"></span><span><i class="icon_target"></i></span></span>
+<p class="content-sub" [innerHTML]="'home.company_profile.description' | translate"></p>
+<div class="col-md-4 animated fadeInRight">
+    <span class="ct-ribbon"><span class="ct-triangle"></span><span class="ct-triangle two"></span><span><i
+                class="icon_target"></i></span></span>
     <div class="us-content">
-        <h4 class="mb-2">VISION</h4>
-        <p>Provide an unmatched experience to our customers by strategically
-            utilizing our expertise as one of the industry's pioneers.</p><a href="/companyprofile#vision"
-            class="btn-small">READ MORE</a>
+        <h4 class="mb-2" [innerText]="'home.company_profile.vision.title' | translate"></h4>
+        <p [innerHtml]="'home.company_profile.vision.description' | translate"></p>
+        <a routerLink="/companyprofile" fragment="vision" routerLinkActive="active" class="btn-small"
+            [innerText]="'home.company_profile.readmore' | translate"></a>
     </div>
 </div>
-<div class="col-lg-4 col-md-4 col-md-4 animated fadeInUp"><span class="ct-ribbon"><span class="ct-triangle"></span><span
-            class="ct-triangle two"></span><span><i class="icon_key"></i></span></span>
+<div class="col-lg-4 col-md-4 col-md-4 animated fadeInUp">
+    <span class="ct-ribbon"><span class="ct-triangle"></span><span class="ct-triangle two"></span><span><i
+                class="icon_key"></i></span></span>
     <div class="us-content">
-        <h4 class="mb-2">MISSION</h4>
-        <p>Deliver exceptional services by exceeding expectations in all aspects
-            including technology, services and people</p><a href="/companyprofile#mission" class="btn-small">READ
-            MORE</a>
+        <h4 class="mb-2" [innerText]="'home.company_profile.mission.title' | translate"></h4>
+        <p [innerHtml]="'home.company_profile.mission.description' | translate"></p>
+        <a routerLink="/companyprofile" fragment="mission" class="btn-small" routerLinkActive="active"
+            [innerText]="'home.company_profile.readmore' | translate"></a>
     </div>
 </div>
-<div class="col-lg-4 col-md-4 animated fadeInLeft"><span class="ct-ribbon"><span class="ct-triangle"></span><span
-            class="ct-triangle two"></span><span><i class="icon_star"></i></span></span>
+<div class="col-lg-4 col-md-4 animated fadeInLeft">
+    <span class="ct-ribbon"><span class="ct-triangle"></span><span class="ct-triangle two"></span><span><i
+                class="icon_star"></i></span></span>
     <div class="us-content">
-        <h4 class="mb-2">CORE VALUES</h4>
-        <p>The core values of Pacific Sea are derived from the synergy of the
-            diverse cultures and nationalities that make up the company and guide the direction and
-            decisions of the company</p><a href="/companyprofile#corevalues" class="btn-small">READ MORE</a>
+        <h4 class="mb-2" [innerText]="'home.company_profile.core_values.title' | translate"></h4>
+        <p [innerHTML]="'home.company_profile.core_values.description' | translate"></p>
+        <a routerLink="/companyprofile" fragment="corevalues" class="btn-small" routerLinkActive="active"
+            [innerText]="'home.company_profile.readmore' | translate"></a>
     </div>
 </div>
