--- a/src/app/main-content/privacy-policy/privacy-policy.component.html
+++ b/src/app/main-content/privacy-policy/privacy-policy.component.html
@@ -21,7 +21,7 @@
             </span></h5>
         <p class="text-justify">By accessing and using this website you are deemed to accept
             the Terms of Use of our Privacy Policy.</p>
-        <ol class="list-custom"></ol><!---->
+        <ol class="list-custom"></ol>
         <h5 class="text-justify"><span class="highlight-color"> INFORMATION COLLECTION AND
                 USE </span></h5>
         <p class="text-justify">We may collect personally identifiable information from you
@@ -30,7 +30,7 @@
             when you are on our site,only when you volunteer information, contact us or submit a form. We only
             use personally identifiable information to fulfill your requests for information or to render
             products or services to you.</p>
-        <ol class="list-custom"></ol><!---->
+        <ol class="list-custom"></ol>
         <h5 class="text-justify"><span class="highlight-color"> INFORMATION SHARING AND
                 DISCLOSURE </span></h5>
         <p class="text-justify">We will not sell or rent your personally identifiable
@@ -60,7 +60,7 @@
             information we hold or you wish that information to be updated or deleted, please send an email to
             <a href="mailto:job@pspbpo.com">info&#64;pspbpo.com</a> or write to us at the address mentioned in the
             contact us section of this web site. </p>
-        <ol class="list-custom"></ol><!---->
+        <ol class="list-custom"></ol>
         <div class="clearfix seprator_top_forty"></div>
     </div>
 </app-container-row-section>
