--- a/src/app/main-content/faqs/faqs.component.html
+++ b/src/app/main-content/faqs/faqs.component.html
@@ -1,12 +1,12 @@
 <app-container-row-section idname="faqs" classname="faq-info section-info">
 
     <div class="content-head center">
-        <h3 class="center_divider"><em>FREQUENTLY ASKED <span class="highlight-color">QUESTIONS</span></em></h3>
+        <h3 class="center_divider" [innerHtml]="'faqs.header' | translate"></h3>
     </div>
     <div class="col-md-9">
         <div class="clearfix seprator_top_forty"></div>
 
-        <app-accordion [items]="faqsItems"></app-accordion>
+        <app-accordion [items]="'faqs.contents' | translate"></app-accordion>
     </div>
 
 </app-container-row-section>
