--- a/src/app/main-content/home/home-careers/home-careers.component.html
+++ b/src/app/main-content/home/home-careers/home-careers.component.html
@@ -1,15 +1,15 @@
 <div class="content-head center">
-    <h3 class="center_divider"><a href="/careers"><em><span class="highlight-color">Careers</span></em></a></h3>
+    <h3 class="center_divider"><a routerLink="/careers"><em><span class="highlight-color" [innerHtml]="'home.careers_section.title' | translate"></span></em></a></h3>
 </div>
-<p class="content-sub">Great opportunity awaits!</p>
+<p class="content-sub" [innerText]="'home.careers_section.title_sub' | translate"></p>
 <section id="bg_color" class="quote-style2 aligncenter animated fadeInLeft" data-stellar-background-ratio="0.3"
     style="background-position: 50% 0%;">
     <div class="bg_overlay"></div>
     <div class="container">
         <div class="row">
             <div id="owl-quotation" class="owl-theme light">
-                <div class="item"><a href="/careers">
-                        <div class="qutation_info"><span class="name">Join Us</span></div>
+                <div class="item"><a routerLink="/careers">
+                        <div class="qutation_info"><span class="name" [innerText]="'home.careers_section.join_us' | translate"></span></div>
                     </a></div>
             </div>
         </div>
