--- a/src/app/main-content/home/outreach/outreach.component.html
+++ b/src/app/main-content/home/outreach/outreach.component.html
@@ -3,34 +3,29 @@
     <div class="container">
         <div class="row">
             <div class="content-head center">
-                <h3 class="center_divider"><em><span class="highlight-color">OUTREACH</span>
-                        PROGRAMS</em></h3>
+                <h3 class="center_divider" [innerHTML]="'home.outreach_section.title' | translate"></h3>
             </div>
-            <p class="content-sub">We always believe in giving back and observe utmost
-                generosity, not only to our employees, but also to our community.</p>
+            <p class="content-sub" [innerText]="'home.outreach_section.description' | translate"></p>
             <div id="owl-blog">
                 <div class="col-md-4 webdesign up-item item">
-                    <div class="upi-thumb"><img src="/images/pages/outreach1.jpg" alt="image"></div>
+                    <div class="upi-thumb"><img src="/images/pages/{{ 'home.outreach_section.contents.0.img' | translate }}" alt="image"></div>
                     <div class="upi-inner">
-                        <h4>RESCUE THAILAND</h4>
-                        <p>Donations were given to Thai Red Cross Society to aid victims of
-                            the devastating 2011 flood.</p>
+                        <h4 [innerText]="'home.outreach_section.contents.0.title' | translate"></h4>
+                        <p [innerText]="'home.outreach_section.contents.0.description' | translate"></p>
                     </div>
                 </div>
                 <div class="col-md-4 webdesign up-item item">
-                    <div class="upi-thumb"><img src="/images/pages/outreach3.jpg" alt="image"></div>
+                    <div class="upi-thumb"><img src="/images/pages/{{ 'home.outreach_section.contents.1.img' | translate }}" alt="image"></div>
                     <div class="upi-inner">
-                        <h4>OPERATION YOLANDA</h4>
-                        <p>Cash assistance were delivered to victims of super typhoon,
-                            Yolanda</p>
+                        <h4 [innerText]="'home.outreach_section.contents.1.title' | translate"></h4>
+                        <p [innerText]="'home.outreach_section.contents.0.description' | translate"></p>
                     </div>
                 </div>
                 <div class="col-md-4 webdesign up-item item">
-                    <div class="upi-thumb"><img src="/images/pages/outreach2.jpg" alt="image"></div>
+                    <div class="upi-thumb"><img src="/images/pages/{{ 'home.outreach_section.contents.2.img' | translate }}" alt="image"></div>
                     <div class="upi-inner">
-                        <h4>PROJECT HABAGAT</h4>
-                        <p>Financial assistance were given to employees who were heavily
-                            affected by torrential rains and flood.</p>
+                        <h4 [innerText]="'home.outreach_section.contents.2.title' | translate"></h4>
+                        <p [innerText]="'home.outreach_section.contents.2.description' | translate"></p>
                     </div>
                 </div>
             </div>
