--- a/src/styles.css
+++ b/src/styles.css
@@ -15121,3 +15121,24 @@ background: none repeat scroll 0% 0% rgba(51, 51, 51, 1);
 	font-size: 16px;
 	display:none;
 }
+
+/* Banner Caption Move */
+.loaded .home-banner-caption {
+    animation: captionMove 1.35s;
+    opacity: 1;
+}
+
+@keyframes captionMove {
+	from {
+	  transform: translate(-115%, -50%); 
+	  opacity: 0;
+	}
+	to {
+	  transform: translate(-50%, -50%);
+	  opacity: 1;
+	}
+  }
+  .home-banner-caption > div {
+	  margin-bottom: 8px;
+  }
+  /* End Banner Caption Move */
